# dopilot

./: .dockerignore  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: docker.yml
apps/agent/: pyproject.toml
apps/agent/dopilot_agent/: __init__.py  deps.py  errors.py  healthcheck.py  main.py
apps/agent/dopilot_agent/api/: __init__.py  artifacts.py  health.py  logs.py  router.py  run.py  status.py
apps/agent/dopilot_agent/artifacts/: __init__.py  cache.py  wheel_cache.py
apps/agent/dopilot_agent/auth/: __init__.py  dependencies.py
apps/agent/dopilot_agent/config/: __init__.py  loader.py  settings.py
apps/agent/dopilot_agent/logs/: __init__.py  tail.py
apps/agent/dopilot_agent/redis/: __init__.py  client.py  commands.py  events.py  heartbeat.py  logs.py  status.py
apps/agent/dopilot_agent/runners/: __init__.py  python_wheel.py  scrapyd.py
apps/agent/dopilot_agent/scrapyd/: __init__.py  client.py  process.py
apps/agent/dopilot_agent/state/: __init__.py  store.py
apps/agent/tests/: conftest.py  test_api_logs_egg.py  test_api_run_status.py  test_auth.py  test_command_consumer.py  test_config.py  test_endpoints.py  test_event_outbox.py  test_health.py  test_healthcheck.py  test_heartbeat_worker.py  test_log_publisher.py  test_logs_tail.py  test_main.py  test_python_wheel.py  test_redis_client.py  test_runner.py  test_scrapyd_client.py  test_scrapyd_process.py  test_state_cas.py  test_state_store.py  test_tail_utf8_boundary.py
apps/server/: alembic.ini  pyproject.toml
apps/server/dopilot_server/: __init__.py  agent_token.py  app.py  errors.py
apps/server/dopilot_server/api/v1/: __init__.py  artifacts.py  auth.py  executions.py  health.py  heartbeat.py  maintenance.py  nodes.py  router.py  schedules.py  schemas.py  stats.py  tasks.py  templates.py
apps/server/dopilot_server/artifacts/: __init__.py  scrapy_store.py  wheel_store.py
apps/server/dopilot_server/auth/: __init__.py  agent_dependencies.py  dependencies.py  tokens.py
apps/server/dopilot_server/clients/: __init__.py  agent.py
apps/server/dopilot_server/config/: __init__.py  loader.py  settings.py
apps/server/dopilot_server/db/: __init__.py  base.py  engine.py
apps/server/dopilot_server/executors/: __init__.py  base.py  python_wheel.py  registry.py  scrapyd.py
apps/server/dopilot_server/logs/: __init__.py  files.py  loop.py  reconcile.py  source.py  sse.py  stream_token.py
apps/server/dopilot_server/models/: __init__.py  auth_token.py  command_outbox.py  event_audit.py  execution.py  node.py  scheduling.py
apps/server/dopilot_server/nodes/: __init__.py  service.py  strategy.py
apps/server/dopilot_server/redis/: __init__.py  client.py  commands.py  consumers.py  dispatcher.py  reconcile.py
apps/server/dopilot_server/scheduler/: __init__.py  runner.py
apps/server/dopilot_server/services/: __init__.py  artifacts.py  builtin_artifacts.py  cancel.py  dispatch.py  events.py  executions.py  logs.py  maintenance.py  outbox.py  resolve.py  schedules.py  states.py  stats.py  templates.py
apps/server/migrations/: env.py
apps/server/migrations/versions/: 0001_initial.py  0002_executions.py  0003_redis_streams.py  0004_task_execution_rename.py  0005_templates_schedules.py  0006_node_state_task_spider.py  0007_build_artifacts_clean_cut.py  0008_command_first_templates.py  0009_id_naming_clean_cut.py  0010_unique_template_schedule_names.py  0011_schedule_enabled.py  0012_build_artifact_archived_at.py
apps/server/tests/: conftest.py  test_agent_token.py  test_artifacts.py  test_auth.py  test_builtin_artifacts.py  test_config.py  test_dispatcher.py  test_event_consumer.py  test_executions.py  test_executions_pagination.py  test_health.py  test_heartbeat_api.py  test_log_consumer.py  test_log_files.py  test_log_source.py  test_loop.py  test_maintenance.py  test_node_ops.py  test_node_selection.py  test_nodes.py  test_outbox.py  test_python_wheel.py  test_reconcile.py  test_reconcile_redis.py  test_redis_client.py  test_redis_fake.py  test_resolve.py  test_scheduler_runner.py  test_schedules.py  test_sse.py  test_states.py  test_stats_nextrun.py  test_stream_token.py  test_templates.py  test_web_static.py
apps/web/: .gitignore  eslint.config.mjs  index.html  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: logo.tsx  providers.tsx
apps/web/hooks/: use-confirm.tsx
apps/web/lib/: format.ts  nodeBadge.ts  nodeSelection.ts  search.ts  templateCommand.ts
apps/web/src/: main.ts
configs/: agent.example.toml  server.docker.toml  server.example.toml
deploy/docker/: Dockerfile  Dockerfile.agent  Dockerfile.base  Dockerfile.server  docker-compose.agent.yml  docker-compose.build.yml  docker-compose.e2e.yml  docker-compose.server.yml  docker-compose.yml
docs/: README.md
docs/agent-governance/: 00-operating-model.md  01-codex-claude-loop.md  02-claude-invocation.md  03-commit-convention.md  new-chat-prompt.md
docs/agent-governance/templates/: acceptance-report.md  claude-feasibility-prompt.md  claude-implementation-prompt.md  codex-review.md  feasibility-review.md  phase-brief.md  test-plan.md
docs/architecture/: 00-overview.md  01-bootstrap-and-config.md  02-data-model.md  03-scheduler-engine.md  04-views-and-frontend.md  05-scrapyd-cluster-io.md  06-auth-and-utils.md
docs/dopilot/: 00-requirements.md  01-gap-executors.md  02-gap-scheduling-nodes-push.md  03-gap-realtime-logs.md  04-gap-i18n.md  05-dev-setup-and-known-issues.md  06-frontend-rewrite.md  07-testing-baseline.md  08-docker-deployment.md  09-package-rename.md  10-roadmap.md
docs/refactor/: 00-redis-streams-agent-communication.md
examples/scrapy_clock/: scrapy.cfg  setup.py
scripts/: build-docker-base.sh  dev-db.sh  docker-deps-hash.sh  smoke-phase1-ui.sh  smoke-phase1.sh
(+406 files in other folders)
