[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dopilot-agent"
version = "0.0.0"
description = "dopilot agent - worker executor HTTP service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6,<3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "dopilot-protocol",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dopilot-agent = "dopilot_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["dopilot_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
