[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dopilot-agent"
version = "0.0.0"
description = "dopilot agent - outbound-only worker executor daemon"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6,<3",
    # Outbound HTTP: agent -> server heartbeat + artifact/wheel fetch. The agent
    # is outbound-only (phase 2.2.7): no FastAPI/uvicorn, no inbound listener.
    "httpx>=0.27",
    # Redis Streams server<->agent transport (phase 1.5).
    "redis>=5,<9",
    "dopilot-protocol",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # In-memory Redis Streams double for the agent reliability test matrix.
    "fakeredis>=2.20",
]

[project.scripts]
dopilot-agent = "dopilot_agent.main:main"
dopilot-agent-healthcheck = "dopilot_agent.healthcheck:main"

[tool.hatch.build.targets.wheel]
packages = ["dopilot_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
