[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dopilot-server"
version = "0.0.0"
description = "dopilot server (web + scheduler hub)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6,<3",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "APScheduler>=3.10,<4",
    "dopilot-protocol",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.19",
    "anyio",
]

[project.scripts]
dopilot-server = "dopilot_server.app:run"

[tool.hatch.build.targets.wheel]
packages = ["dopilot_server"]
